# sha2_agent

./: .gitignore  CMakeLists.txt  COMMIT_MESSAGE.md  COMPREHENSIVE_COMMIT_MESSAGE.md  FINAL_COMMIT_MESSAGE.md  IMPROVEMENTS_SUMMARY.md  README.md  TODO_COMMIT_MESSAGE.md  TODO_RESOLUTION.md  build.sh  debug_blake256  debug_blake256.cpp  debug_blake256_detailed  debug_blake256_detailed.cpp  hashgen  test_original_blake  test_original_blake.c
docs/: hashgen.1  sha256sum.1
prompts/: create_file.md  generic_hash.md
src/: blake256.cpp  blake256.h  blake512.cpp  blake512.h  hash_base.h  hash_config.h  hash_constants.h  hash_errors.h  hash_factory.cpp  hash_factory.h  hash_interface.h  hash_logging.h  main.cpp  md5.cpp  md5.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  stream_processor.cpp  stream_processor.h
tests/: test_blake256.cpp  test_blake512.cpp  test_error_handling.cpp  test_hash.cpp  test_md5.cpp  test_sha1.cpp  test_sha256.cpp  test_sha512.cpp
